add calculate and clear buttons, and a basic

--- a/app/src/main/res/layout/fragment_loan.xml
+++ b/app/src/main/res/layout/fragment_loan.xml
@@ -1,10 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center_horizontal"
     tools:context="beanstage.com.lender.LoanActivityFragment"
     tools:showIn="@layout/activity_loan">
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/calculate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:text="Calculate"/>
+    <Button
+        android:id="@+id/clear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:text="Clean"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TableLayout
+            android:id="@+id/amortization_table"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+        </TableLayout>
+
+    </ScrollView>
+</LinearLayout>
