--- a/app/src/main/res/layout/dialog_field_loan.xml
+++ b/app/src/main/res/layout/dialog_field_loan.xml
@@ -18,12 +18,27 @@
 
         <TextView
             android:id="@+id/text_rate_tip"
-            android:layout_width="65dp"
+            android:layout_width="30dp"
             android:layout_height="40dp"
             android:layout_toRightOf="@+id/edit_rate"
             android:layout_below="@+id/edit_amount"
             android:text="@string/rate_sign"
             tools:text="@string/rate_sign" android:layout_toEndOf="@+id/edit_rate" />
+
+        <TextView
+            android:id="@+id/text_is_anual"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="anual?"
+            android:layout_below="@+id/edit_amount"
+            android:layout_toRightOf="@+id/text_rate_tip" />
+
+        <CheckBox
+            android:id="@+id/chk_anual"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/edit_amount"
+            android:layout_toRightOf="@+id/text_is_anual" />
 
         <TextView
             android:id="@+id/text_rate"
