--- a/app/src/main/res/layout/fragment_loan.xml
+++ b/app/src/main/res/layout/fragment_loan.xml
@@ -26,13 +26,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TableLayout
-            android:id="@+id/amortization_table"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/feeRcicleView"
+            android:scrollbars="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-
-        </TableLayout>
-
+            android:layout_height="wrap_content"/>
     </ScrollView>
 </LinearLayout>
