--- a/app/src/main/res/layout/dialog_field_loan.xml
+++ b/app/src/main/res/layout/dialog_field_loan.xml
@@ -11,15 +11,14 @@
 
         <TextView
             android:id="@+id/amountTextView"
-            android:layout_width="65dp"
-            android:layout_height="40dp"
+            style="@style/TextView"
             android:text="@string/amount"
             tools:text="@string/amount" />
 
         <TextView
             android:id="@+id/rateTipTextView"
-            android:layout_width="30dp"
-            android:layout_height="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/rateEditText"
             android:layout_below="@+id/amountEditText"
             android:text="@string/rate_sign"
@@ -37,8 +36,7 @@
 
         <TextView
             android:id="@+id/rateTextView"
-            android:layout_width="65dp"
-            android:layout_height="40dp"
+            style="@style/TextView"
             android:layout_below="@id/amountTextView"
             android:text="@string/anual_rate"
             tools:text="@string/anual_rate" />
@@ -53,22 +51,18 @@
 
         <EditText
             android:id="@+id/amountEditText"
-            android:layout_width="132dp"
-            android:layout_height="wrap_content"
+            style="@style/EditTextStyle"
             android:layout_toRightOf="@+id/amountTextView"
             android:maxLength="7"
-            android:ems="10"
             android:inputType="numberSigned"
             android:labelFor="@+id/amountEditText" android:layout_toEndOf="@+id/amountTextView" />
 
         <EditText
             android:id="@+id/rateEditText"
-            android:layout_width="132dp"
-            android:layout_height="40dp"
+            style="@style/EditTextStyle"
             android:layout_below="@id/amountEditText"
             android:layout_toRightOf="@id/rateTextView"
             android:maxLength="5"
-            android:ems="10"
             android:inputType="numberDecimal"
             android:labelFor="@+id/rateEditText"
             android:layout_toEndOf="@id/rateTextView" />
@@ -76,21 +70,16 @@
         <EditText
             android:id="@+id/termEditText"
             android:labelFor="@+id/termEditText"
-            android:layout_width="132dp"
-            android:layout_height="40dp"
+            style="@style/EditTextStyle"
             android:layout_toRightOf="@id/termTextView"
             android:layout_below="@id/rateEditText"
             android:maxLength="3"
-            android:ems="10"
-            android:inputType="number" android:layout_toEndOf="@id/termTextView" />
+            android:inputType="number"
+            android:layout_toEndOf="@id/termTextView" />
 
         <TextView
             android:id="@+id/termTextView"
-            android:layout_width="65dp"
-            android:layout_height="40dp"
+            style="@style/TextView"
             android:layout_below="@id/rateTextView"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:text="@string/term"
-            tools:text="@string/term" android:paddingStart="10dp" />
+            android:text="@string/term"/>
 </RelativeLayout>
