--- a/app/src/main/res/layout/fragment_loan.xml
+++ b/app/src/main/res/layout/fragment_loan.xml
@@ -29,6 +29,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/feeRcicleView"
             android:scrollbars="vertical"
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </ScrollView>
