--- a/app/src/main/res/layout/fee_row_layout.xml
+++ b/app/src/main/res/layout/fee_row_layout.xml
@@ -6,17 +6,22 @@
     android:weightSum="5">
 
     <TextView
+        android:id="@+id/n"
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content" />
+    <TextView
         android:id="@+id/feeTextView"
         android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="wrap_content" />
     <TextView
-        android:id="@+id/amortizationTextView"
+        android:id="@+id/interesTextView"
         android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="wrap_content" />
     <TextView
-        android:id="@+id/interesTextView"
+        android:id="@+id/amortizationTextView"
         android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="wrap_content" />
